--- a/1.html
+++ b/1.html
@@ -17,11 +17,17 @@
 </nav>
 
 <h2>그는 누구인가?</h2>
+
+<img src="img_3723.jpg" width="450 pixel">
+<img src="img_3468.jpg" width="450 pixel">
+
+
   <p>
   <br>이름 : 김우진
   <br>직업 : 아마존직판 UK담당
-  <br>나이 : 30
-  <br>생일 : 12월 9일
+  <br>생일 : 1993년 12월 9일
+  <br>전공 : 심리학
+  <br>특이 이력 : 인도 4년 거주, 미국 4년 거주
 </p>
 
 </body>
