--- a/2.html
+++ b/2.html
@@ -24,8 +24,8 @@
      <p>헬스</p>
     <li>음악감상</li>
       <p> 좋아하는 아티스트:</p>
-      <p> DPR IAN</p>
-      <p> Paul Blaco</p>
+      <p> <a href="https://www.youtube.com/watch?v=E-8pyVBvCPQ#" target="_blank" title="No Blueberries">DPR IAN</a></p>
+      <p> <a href="https://www.youtube.com/watch?v=EpeokNluPOo#" target="_blank" title="Summer">Paul Blanco</a></p>
   </ul>
 
 </body>
