--- a/1.html
+++ b/1.html
@@ -18,8 +18,8 @@
 
 <h2>그는 누구인가?</h2>
 
-<img src="img_3723.jpg" width="450 pixel">
-<img src="img_3468.jpg" width="450 pixel">
+<img src="https://user-images.githubusercontent.com/111094669/184480247-465226db-a43a-428c-bde4-5ef3250e9a9b.JPG" width="450 pixel">
+<img src="https://user-images.githubusercontent.com/111094669/184480256-d1cabc09-38e4-484e-a07e-ad732b254629.JPG" width="450 pixel">
 
 
   <p>
