--- a/index.html
+++ b/index.html
@@ -17,8 +17,8 @@
   <nav>
 
 <br>
-  <img src="img_1744.jpg" width="450 pixel">
-  <img src="img_1183.jpg" width="450 pixel">
+  <img src="https://user-images.githubusercontent.com/111094669/184480254-c37c07c2-9806-4ea5-bce2-412a6402cb28.JPG" width="450 pixel">
+  <img src="https://user-images.githubusercontent.com/111094669/184480251-4ddaa7b7-6de0-4aaf-8466-d3973d5aaffc.JPG" width="450 pixel">
 </br>
 
 </body>
