--- a/1.html
+++ b/1.html
@@ -6,28 +6,28 @@
   <link rel="stylesheet" href="style.css">
 </head>
 <body>
-<h1><strong><a href="index.html">김우진</a></strong></h1>
+<h1><strong><a href="index.html">Woojin Kim</a></strong></h1>
 
-<nav>
-<ul>
- <li><a href="1.html">그는 누구인가?</a></li>
- <li><a href="2.html">취미</a></li>
- <li><a href="3.html">연락처</a></li>
-</ul>
-</nav>
+  <nav>
+    <ul>
+      <li><a href="1.html">About Myself</a></li>
+      <li><a href="2.html">Hobby</a></li>
+      <li><a href="4.html">MBTI</a></li>
+      <li><a href="3.html">Contact</a></li>
+    </ul>
+  <nav>
 
-<h2>그는 누구인가?</h2>
+<h2>About Myself</h2>
 
 <img src="https://user-images.githubusercontent.com/111094669/184480247-465226db-a43a-428c-bde4-5ef3250e9a9b.JPG" width="450 pixel">
 <img src="https://user-images.githubusercontent.com/111094669/184480256-d1cabc09-38e4-484e-a07e-ad732b254629.JPG" width="450 pixel">
 
 
   <p>
-  <br>이름 : 김우진
-  <br>직업 : 아마존직판 UK담당
-  <br>생일 : 1993년 12월 9일
-  <br>전공 : 심리학
-  <br>특이 이력 : 인도 4년 거주, 미국 4년 거주
+  <br>Name : Woojin Kim
+  <br>Occupation : None at the moment
+  <br>Birthday : 9th December 1993
+  <br>Education : University of Iowa, Bachelor of Arts in Pyschology(2012-2018)
 </p>
 
 </body>
