--- a/2.html
+++ b/2.html
@@ -6,24 +6,26 @@
   <link rel="stylesheet" href="style.css">
 </head>
 <body>
-<h1><strong><a href="index.html">김우진</a></strong></h1>
+<h1><strong><a href="index.html">Woojin Kim</a></strong></h1>
 
-<nav>
-  <ul>
-    <li><a href="1.html">그는 누구인가?</a></li>
-    <li><a href="2.html">취미</a></li>
-    <li><a href="3.html">연락처</a></li>
-  </ul>
-</nav>
-<h2>취미</h2>
+  <nav>
+    <ul>
+      <li><a href="1.html">About Myself</a></li>
+      <li><a href="2.html">Hobby</a></li>
+      <li><a href="4.html">MBTI</a></li>
+      <li><a href="3.html">Contact</a></li>
+    </ul>
+  <nav>
+
+<h2>Hobby</h2>
   <ul class="hobby">
-    <li>게임</li>
+    <li>Games</li>
      <p>LOL</p>
      <p>Playstation</p>
-    <li>운동</li>
-     <p>헬스</p>
-    <li>음악감상</li>
-      <p> 좋아하는 아티스트:</p>
+    <li>Sports</li>
+     <p>Working out</p>
+    <li>Music</li>
+      <p> Favorite artists:</p>
       <p> <a href="https://www.youtube.com/watch?v=E-8pyVBvCPQ#" target="_blank" title="No Blueberries">DPR IAN</a></p>
       <p> <a href="https://www.youtube.com/watch?v=EpeokNluPOo#" target="_blank" title="Summer">Paul Blanco</a></p>
   </ul>
