--- a/3.html
+++ b/3.html
@@ -6,18 +6,20 @@
   <link rel="stylesheet" href="style.css">
 </head>
 <body>
-<h1><strong><a href="index.html">김우진</a></strong></h1>
+<h1><strong><a href="index.html">Woojin Kim</a></strong></h1>
+
   <nav>
     <ul>
-      <li><a href="1.html">그는 누구인가?</a></li>
-      <li><a href="2.html">취미</a></li>
-      <li><a href="3.html">연락처</a></li>
+      <li><a href="1.html">About Myself</a></li>
+      <li><a href="2.html">Hobby</a></li>
+      <li><a href="4.html">MBTI</a></li>
+      <li><a href="3.html">Contact</a></li>
     </ul>
-  </nav>
+  <nav>
 
 <br>
-<h2>연락처</h2>
-  <p>Phone : 010-9166-6833</p>
+<h2>Contact</h2>
+  <p>Phone : +82 010-9166-6833</p>
   <p>E-mail : wjkim1209@naver.com</p>
   <p><a href="https://www.instagram.com/w00jinkim/#" target="_blank" title="w00jinkim">Instagram : w00jinkim</a></p>
 
