--- a/1.html
+++ b/1.html
@@ -8,14 +8,14 @@
 <body>
 <h1><strong><a href="index.html">Woojin Kim</a></strong></h1>
 
+<div>
   <nav>
-    <ul>
-      <li><a href="1.html">About Myself</a></li>
-      <li><a href="2.html">Hobby</a></li>
-      <li><a href="4.html">MBTI</a></li>
-      <li><a href="3.html">Contact</a></li>
-    </ul>
-  <nav>
+      <a href="1.html">About Myself</a>
+      <a href="2.html">Hobby</a>
+      <a href="4.html">MBTI</a>
+      <a href="3.html">Contact</a>
+  </nav>
+<div>
 
 <h2>About Myself</h2>
 
